Added button click handling and ViewModel support
- Added a support to set different timing for particular set but this functionality is currently disabled.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Number of sets"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:gravity="center" />
 
         <include
             android:id="@+id/setsCountLayout"
@@ -31,11 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Time for each set (seconds)"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:gravity="center" />
 
         <include
             android:id="@+id/setsTimerLayout"
@@ -45,26 +37,47 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Rest time (seconds)"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:gravity="center" />
 
         <include
             android:id="@+id/restTimerLayout"
             layout="@layout/increment_decrement_template"/>
 
-        <com.google.android.material.button.MaterialButton
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cornerRadius="5dp"
-            android:text="Set different time for sets"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/resetButton"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                app:cornerRadius="28dp"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:textColor="@color/white"
+                android:layout_margin="24dp"
+                android:textSize="24dp"
+                app:icon="@drawable/reset_button"
+                app:iconGravity="textStart"
+                app:iconPadding="0dp"
+                app:iconTint="@color/white" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/playButton"
+                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                app:cornerRadius="28dp"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:textColor="@color/white"
+                android:layout_margin="24dp"
+                android:textSize="24dp"
+                app:icon="@drawable/play_button"
+                app:iconGravity="textStart"
+                app:iconPadding="0dp"
+                app:iconTint="@color/white"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
