--- a/app/src/main/res/layout/timer_activity.xml
+++ b/app/src/main/res/layout/timer_activity.xml
@@ -1,91 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/titleText"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Set 1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/rippleView"
-        android:gravity="center" />
+        android:layout_centerInParent="true">
 
-        <com.shubhamh.android.apps.workouttimer.RippleView
-            android:id="@+id/rippleView"
-            android:layout_width="400dp"
-            android:layout_height="400dp"
-            app:rv_color="@color/teal_200"
-            app:rv_radius="15dp"
-            app:rv_scale="12"
-            app:rv_duration="1000"
-            android:layout_margin="24dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:rv_type="stroke">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/timerButton"
-        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-        app:cornerRadius="125dp"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:textColor="@color/white"
-        android:layout_margin="24dp"
-        android:textSize="24dp"
-        android:layout_centerInParent="true"
-        android:text="30"/>
-        </com.shubhamh.android.apps.workouttimer.RippleView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rippleView"
+                android:background="@drawable/background_stroke">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/rippleView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/pauseButton"
+                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_margin="24dp"
+                    android:textColor="@color/white"
+                    android:textSize="24dp"
+                    app:cornerRadius="28dp"
+                    app:icon="@drawable/pause_button"
+                    app:iconGravity="textStart"
+                    app:iconPadding="0dp"
+                    app:iconTint="@color/white" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/pauseButton"
-        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-        app:cornerRadius="28dp"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:textColor="@color/white"
-        android:layout_margin="24dp"
-        android:textSize="24dp"
-        app:icon="@drawable/pause_button"
-        app:iconGravity="textStart"
-        app:iconPadding="0dp"
-        app:iconTint="@color/white" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/stopButton"
+                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_margin="24dp"
+                    android:textColor="@color/white"
+                    android:textSize="24dp"
+                    app:cornerRadius="28dp"
+                    app:icon="@drawable/stop_button"
+                    app:iconGravity="textStart"
+                    app:iconPadding="0dp"
+                    app:iconTint="@color/white" />
+            </LinearLayout>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/stopButton"
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-            app:cornerRadius="28dp"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:textColor="@color/white"
-            android:layout_margin="24dp"
-            android:textSize="24dp"
-            app:icon="@drawable/stop_button"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconTint="@color/white" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toTopOf="@+id/rippleView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="center"
+                android:padding="20dp"
+                android:background="@drawable/background_stroke">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            <TextView
+                android:id="@+id/titleText"
+                style="@style/TimerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginEnd="20dp"
+                android:text="Set 1"/>
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/animationView"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    app:lottie_rawRes="@raw/alert"
+                    app:lottie_autoPlay="true"
+                    android:padding="0dp"
+                    android:layout_margin="0dp"
+                    app:lottie_loop="true"
+                    android:background="@drawable/background_stroke"/>
+            </LinearLayout>
+
+            <com.shubhamh.android.apps.workouttimer.RippleView
+                android:id="@+id/rippleView"
+                android:layout_width="400dp"
+                android:layout_height="400dp"
+                android:layout_margin="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:rv_color="@color/teal_200"
+                app:rv_duration="1000"
+                app:rv_radius="15dp"
+                app:rv_scale="12"
+                app:rv_type="stroke">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/timerButton"
+                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="30"
+                    android:textColor="@color/white"
+                    android:textSize="100dp"
+                    android:textStyle="bold"
+                    app:cornerRadius="125dp" />
+            </com.shubhamh.android.apps.workouttimer.RippleView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</RelativeLayout>
