--- a/app/src/main/res/layout/increment_decrement_template.xml
+++ b/app/src/main/res/layout/increment_decrement_template.xml
@@ -29,7 +29,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/NormalText"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/plusButton"
