--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,4 +6,10 @@
         <item name="color">@color/black</item>
         <item name="android:textSize">50dp</item>
     </style>
+
+    <style name="NormalText">
+        <item name="fontFamily">sans-serif-condensed</item>
+        <item name="color">@color/black</item>
+        <item name="android:textSize">20dp</item>
+    </style>
 </resources>
