Fix Dark theme issues

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="alert">#f4511e</color>
     <color name="cool">#00b0ff</color>
+    <color name="textInputBackground">@color/white</color>
 </resources>
